			  - 2003-01-14:  If register_globals was turned on and cookies were favored by variable_order, the value of a cookie overwrote a GET or POST variable with the same name  (Niels)
			  - 2003-01-14:  Priority wasn't recalculated during an update due to a typo  (Niels)
			  - 2003-01-16:  System unavailable message wasn't shown on publisher login during upgrade process  (Matteo)
			

v 2.0rc2		+ Misc bugfixes
			  - 2003-01-07:  Wrong value was used to identify PHP < 4.0.3 during the install and upgrade process  (Niels)
			  - 2003-01-08:  After the upgrade all config.inc.php boolean variables were wrongly set to true  (Matteo)
			  - 2003-01-08:  Adding a client id during direct selection caused an invalid SQL query -> no banners were shown  (Niels)


v 2.0rc1		+ Added the ability to serve and manage text ads  (Niels, 2002-07-29)
			+ Added the ability to preview banners on the Linked Banners page  (Niels, 2002-08-01)
			+ Added the ability to show which banners match when using campaigns to link zones to banners  (Niels, 2002-08-01)
			+ Added the ability to show the parent campaigns when using banners to link zones to banners  (Niels, 2002-08-01)
			+ Added the ability to auto clean old statistics and userlog entries  (Matteo, 2002-08-02)
			+ Made phpAdsNew compatible with register_globals = off and/or gpc_magic_quotes = off  (Niels, 2002-08-05)
			+ The language and browser delivery limitations now have presets, which can be easily selected  (Niels, 2002-08-08)
			+ Added Geotargeting based on the IP2Country database. To enable this feature you need to buy the database
			  from IP2Country. Also added two delivery limitations called 'Country' and 'Continent' to enable the Geotracking  (Niels, 2002-08-18)
			+ The source parameter can now be overwritten in Flash banners with multiple links in order to be able to log each destination url as a seperate entity (Niels, 2002-10-14)